# spring2024-final

./: .gitignore  CMakeLists.txt  CMakePresets.json  Course.hpp  Major.hpp  README.md  University.hpp
Major/: Major.hpp
University/: University.hpp
data/: reportcard.csv  sample.csv  uci.csv
source/: Course.hpp  Major.hpp  Parsing.cpp  Parsing.hpp  University.hpp  fmt_impls.hpp  main.cpp  parsing.cpp  parsing.hpp  test
test/: CMakeLists.txt  test_parsing.cpp
